# cs4670

./: .gitignore  .gitmodules  cs4670.sublime-project
proj/1/artifact/: snavely.tga  snavely_m.tga
proj/1/code/: BrushConfigUI.cpp  FltDesignUI.cpp  FltDesignUI.h  HelpPageUI.cpp  ImgFltAux.cpp  ImgFltAux.h  ImgFltMain.cpp  ImgView.cpp  ImgView.h  Makefile  PriorityQueue.h  README.txt  ScissorPanelUI.h  correlation.cpp  correlation.h  iScissor.cpp  iScissor.h
proj/1/samplesol/: scissors_linux  scissors_mac
proj/1/sol/: BrushConfigUI.h  HelpPageUI.h  ImgFilterUI.cpp  ImgFilterUI.h  ImgView.cpp  ScissorPanelUI.cpp  correlation.cpp  correlation.h  iScissor.cpp  iScissor.h  imgflt.h  scissors  xcorr
proj/2/: genroc.sh  harris.tga  plot.roc.txt  plota.roc.txt
proj/2/code/: FeatureSet.cpp  FeatureSet.h  Features  Features.sln  Features.vcxproj  FeaturesDoc.cpp  FeaturesDoc.h  FeaturesMain.cpp  FeaturesUI.cpp  ImageDatabase.cpp  ImageDatabase.h  ImageView.cpp  ImageView.h  features.cpp  features.h  lena.f
proj/2/data/: 1hm.f  1hma.f  1hs.f  1hsa.f  2hm.f  2hma.f  2hs.f  2hsa.f  aucfile1hm  aucfile1hma  aucfile1hs  aucfile1hsa  aucfile2hm  aucfile2hma  aucfile2hs  aucfile2hsa  rocfile1hm  rocfile1hma  rocfile1hs  rocfile1hsa  rocfile2hm  rocfile2hma  rocfile2hs  rocfile2hsa
proj/2/gnuplot/: plot.roc.txt  plot.threshold.txt
proj/2/samplesolution/: FeaturesSolutionLinux  FeaturesSolutionMac
proj/2/webpage/: auc.txt
proj/3/code/: BlendImages.cpp  BlendImages.h  FeatureAlign.cpp  FeatureAlign.h  FeatureMatch.h  (+10 more)
proj/4/: Makefile
proj/5/code/: CMakeLists.txt  ControlsBox.h  CroppedImageDatabase.cpp  CroppedImageDatabase.h  Detection.cpp  Detection.h  Feature.cpp  Feature.h  FileIO.cpp  GUIController.cpp  GUIModel.cpp  GUIModel.h  ImageDatabase.h  ImageView.h  ImageViewGL.h  ObjectDetector.cpp  ObjectDetector.h  PrecisionRecall.cpp  PrecisionRecall.h  SubBandImagePyramid.inl  SupportVectorMachine.cpp  Utils.cpp  main.cpp  plot_pr.m
proj/5/code/winlibs/FLTK/lib/: fltkformsd.lib  fltkimages.lib  fltkimagesd.lib  fltkjpeg.lib  fltkjpegd.lib  fltkpng.lib  fltkpngd.lib
proj/5/code/winlibs/libjpeg-turbo/include/: jconfig.h
proj/5/code/winlibs/libjpeg-turbo/lib/: jpeg.lib  turbojpeg-static.lib  turbojpeg.lib
proj/Project1/: iScissor.sln  iScissor.vcxproj
proj/Project2/: FeatureSet.cpp  FeatureSet.h  Features.sln  Features.vcxproj  FeaturesDoc.cpp  FeaturesDoc.h  FeaturesMain.cpp  FeaturesUI.cpp  FeaturesUI.h  ImageDatabase.cpp  ImageDatabase.h  ImageView.cpp  ImageView.h  Makefile  README.md  features.cpp  features.h
proj/Project3/: .gitignore  BlendImages.cpp  BlendImages.h  FeatureAlign.cpp  FeatureAlign.h  FeatureMatch.cpp  FeatureSet.cpp  FeatureSet.h  Makefile  Panorama.vcxproj  README.md  SVD.cpp  SVD.h  WarpSpherical.cpp  WarpSpherical.h
proj/Project4/: .gitignore  README.md  svm.dsp  svm.dsw  svm.vcxproj
proj/Project5/: .gitignore  Common.h  ControlsBox.cpp  Detection.cpp  Feature.cpp  Feature.h  FileIO.h  GUIController.h  ImageDatabase.cpp  ImageView.cpp  ImageViewGL.cpp  ObjectDetector.cpp  ObjectDetector.h  ParametersMap.cpp  ParametersMap.h  README.md  SubBandImagePyramid.h  SupportVectorMachine.cpp  SupportVectorMachine.h  Utils.h  main.cpp
resources/CMU_ComputerVision_LectureNotes/: lec-10.ppt  lec-13.ppt  lec-15.ppt  lec-18.ppt  lec-19.ppt  lec-20.ppt  lec-4.ppt  lec-9.ppt
resources/cs4780_proj/: .gitignore  .gitmodules  README.md
resources/tex/: graphvizzz.sty  jdh.sty  pset.cls
(+661 files in other folders)
